refactor(core): 使用香草志重构